# cw20-bonding

./: Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  cw20_bonding.wasm
examples/: schema.rs
src/: contract.rs
