[package]
name = "cw20-bonding"
version = "0.1.0"
authors = ["0xkdavid <0xkdavid@gmail.com>"]
edition = "2018"
description = "Implement basic bonding curve to cw20 tokens"
license = "Apache-2.0"
repository = "https://github.com/0xkdavid/cw20-bonding"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""
[dependencies]
cw-utils = { version = "0.11.1" }
cw2 = { version = "0.11.1" }
cw20 = { version = "0.11.1" }
cw20-base = { version = "0.11.1", features = ["library"] }
cw-storage-plus = { version = "0.11.1" }
cosmwasm-std = { version = "1.0.0-beta3", default-features = false, features = [
  "staking",
] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
rust_decimal = { version = "1.14.3" }
integer-sqrt = { version = "0.1.5" }
integer-cbrt = { version = "0.1.2" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }
